<resources>
    <string name="app_name">ShopCafe</string>
    <string name="name_brand">Ordinary Coffee House</string>
    <string name="buy_icon">Buy</string>
    <string name="Profile_icon">Profile</string>
    <string name="Greeting_moring">Good Morning</string>
    <string name="loyaltycard">Loyalty card</string>
    <string name="Choosedrink">Choose your drink</string>
    <string name="Home">Home</string>
    <string name="Gift">Gift</string>
    <string name="Order">Order</string>
    <string name="Americano">Americano</string>
    <string name="Cafe">Cafe</string>
    <string name="On_going">On going</string>
    <string name="History">History</string>
    <string name="My_order">My Order</string>
    <string name="Rewards">Rewards</string>
    <string name="My_points">My Points:</string>
    <string name="marks">0</string>
    <string name="Redeem">Redeem drinks</string>
    <string name="His_reward">History Rewords</string>
    <!-- fragment of drink details -->
    <string name="Details">Details</string>
    <string name="Shot">Shot</string>
    <string name="Select">Select</string>
    <string name="Size">Size</string>
    <string name="Ice">Ice</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Money">0</string>
    <string name="Single">Single</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="leftarrow">Back</string>
    <string name="quantity">1</string>
    <string name="Big_size">Big size</string>
    <string name="Mid_size">Mid size</string>
    <string name="Small_size">Small size</string>
    <string name="Cup_tea">Cup tea</string>
    <string name="Bottle">Bottle</string>
    <string name="Add_to_Cart">Add to cart</string>
    <string name="dou">Double</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="idioms">Your order has been placed successfully. \n For more details, go to my orders.</string>
    <string name="order_success">Order Success</string>
    <string name="track_my_order">Track My Order</string>
    <string name="my_cart">My Cart</string>
    <string name="back">Back</string>
    <string name="total_price">Total Price</string>
    <string name="bottle">Bottle</string>

</resources>