<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Drink_child_details"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageButton
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/leftarrow"
            android:contentDescription="@string/leftarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buy_details"
            app:layout_constraintStart_toEndOf="@+id/left_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <ImageButton
            android:id="@+id/buy_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/buy"
            android:text="@string/buy_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:contentDescription="@string/buy_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_Americano"
        android:layout_width="220dp"
        android:layout_height="163dp"
        android:src="@drawable/cafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Americano">

        <TextView
            android:id="@+id/text_Americano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Americano"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout6"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout6"
            app:layout_constraintVertical_bias="0.542" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/view_quantity"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/quantity"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/plus_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/shape_gradient"
                android:background="@drawable/plus"
                android:contentDescription="@string/plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/minux_button"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/minus"
                android:backgroundTint="@color/shape_gradient"
                android:contentDescription="@string/minus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_quantity"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Shot"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout7"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout7"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout7"
            app:layout_constraintVertical_bias="0.514" />

        <Button
            android:id="@+id/double_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/stroke"
            android:text="@string/dou"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout7"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout7" />

        <Button
            android:id="@+id/single_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Single"
            android:backgroundTint="@color/stroke"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout7"
            app:layout_constraintEnd_toStartOf="@+id/double_shot"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Select"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout8"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout8" />

        <ImageButton
            android:id="@+id/bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bottle"
            android:contentDescription="Bottle"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout8"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout8"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/cuptea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cuptea"
            android:contentDescription="@string/Cup_tea"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
            app:layout_constraintEnd_toStartOf="@+id/bottle"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout8"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Size"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout9"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout9" />

        <ImageButton
            android:id="@+id/big_cup"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/midsize"
            android:contentDescription="@string/Big_size"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout9"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout9"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/mid_cup"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/midsize"
            android:contentDescription="@string/Mid_size"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
            app:layout_constraintEnd_toStartOf="@+id/big_cup"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout9"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/small_cup"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/midsize"
            android:contentDescription="@string/Small_size"
            android:minWidth="20dp"
            android:minHeight="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
            app:layout_constraintEnd_toStartOf="@+id/mid_cup"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout9"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
        android:id="@+id/constraintLayout10">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Ice"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout10"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout10"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout10"
            app:layout_constraintVertical_bias="0.514" />

        <ImageButton
            android:id="@+id/three_ice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/threeice"
            android:contentDescription="@string/Ice"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout10"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout10"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout10"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/two_ice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/twoice"

            android:contentDescription="@string/Ice"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout10"
            app:layout_constraintEnd_toStartOf="@+id/three_ice"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout10"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/one_ice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/oneice"
            android:contentDescription="@string/Ice"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout10"
            app:layout_constraintEnd_toStartOf="@+id/two_ice"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout10"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/shape_gradient"
        android:backgroundTint="@color/shape_gradient"
        android:text="@string/Add_to_Cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toTopOf="@+id/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Total_Amount"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.514" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/Money"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>